# personal-memory-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  ROADMAP.md  SPEC_FONCTIONNELLE.md  SPEC_TECHNIQUE.md  mcts_baseline.json  pyproject.toml  pyrightconfig.json
docs/: ARCHITECTURE.html  RECOMMANDATIONS_CLAUDE_CODE.md
src/personal_memory_mcp/: __init__.py  __main__.py
src/personal_memory_mcp/cli/: main.py
src/personal_memory_mcp/extraction/: base.py  ollama.py
src/personal_memory_mcp/importeurs/: base.py  claude.py  claude_code.py  lecteur.py  openai.py
src/personal_memory_mcp/mcp/: server.py
src/personal_memory_mcp/memory/: deduplication.py  service.py  storage.py
src/personal_memory_mcp/setup/: clients.py
src/personal_memory_mcp/ui/: index.html  serveur.py
tests/: conftest_ui.py  test_coherence_embeddings.py  test_deduplication.py  test_extraction.py  test_importeurs.py  test_integration_mcp.py  test_lecteur.py  test_ui_navigation.py  test_ui_serveur.py
tests/fixtures/: claude_code_sample.jsonl  claude_memories_sample.json
