[project]
name = "personal-memory-mcp"
version = "0.1.3"
description = "Serveur MCP local — mémoire personnelle extraite depuis les historiques IA"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Sébastien Etievant", email = "etievant.sebastien@protonmail.com" }
]
keywords = ["mcp", "memory", "llm", "ollama", "sqlite", "claude", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
    "Environment :: Web Environment",
]
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.27.2",
    "sqlite-vec>=0.1.7",
    "typer>=0.25.1",
    "rich>=14.0.0",
    "httpx>=0.28.0",
    "tomli-w>=1.2.0",
    "idna>=3.15",
    "pydantic>=2.13.4",
]

[project.urls]
Homepage = "https://github.com/OnyxynO/personal-memory-mcp"
Repository = "https://github.com/OnyxynO/personal-memory-mcp"
Issues = "https://github.com/OnyxynO/personal-memory-mcp/issues"
Changelog = "https://github.com/OnyxynO/personal-memory-mcp/releases"

[project.scripts]
mmcp = "personal_memory_mcp.cli.main:app"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "anthropic>=0.97.0",
    "playwright>=1.59.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
